k8s/m-board-api.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: mboard-api-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: mboard-api
  template:
    metadata:
      labels:
        component: mboard-api
    spec:
      containers:
        - name: mboard-api-container
          image: maaqz/mgross:1.0.0
          ports:
            - containerPort: 4567
---
apiVersion: v1
kind: Service
metadata:
  name: mboard-api-service
spec:
  selector:
    component: mboard-api
  ports:
    - port: 4567
